--- a/style.css
+++ b/style.css
@@ -94,6 +94,10 @@ h2, h3 {
     float: right;
 }
 
+. design {
+    object-fit: cover;
+}
+
 @media (max-width: 993px) {
     .hero-image {
         height: 400px;
