--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
 .image {
     border-radius: 50%;
     width: 17%;
+    object-fit: cover;
 }
 
 hr {
@@ -128,6 +129,7 @@ h2, h3 {
     }
 
     .image {
+        object-fit: cover;
         width: 45%;
     }
 }
